src/tests/fixtures/input_type_one_of/oneOfUnionMemberNotLiteral.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlInput
 * @oneOf
 */
export type Greeting = string | { name: string };

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_type_one_of/oneOfUnionMemberNotLiteral.ts:5:24 - error: Expected each member of a @oneOf @gqlInput to be a TypeScript object literal with exactly one property.

5 export type Greeting = string | { name: string };
                         ~~~~~~
